# OBESC

./: .gitignore  README.md  acoes_extensao.csv  acoes_extensao_coordenadas.csv  bairros.py  coordenadas.py  main.py  pyproject.toml  web_scraper.py
